--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,15 @@
 @font-face {
   font-family: 'iconfont';  /* project id 579417 */
-  src: url('https://at.alicdn.com/t/font_579417_q8g2czwf1kathuxr.eot');
-  src: url('https://at.alicdn.com/t/font_579417_q8g2czwf1kathuxr.eot?#iefix') format('embedded-opentype'),
-  url('https://at.alicdn.com/t/font_579417_q8g2czwf1kathuxr.woff') format('woff'),
-  url('https://at.alicdn.com/t/font_579417_q8g2czwf1kathuxr.ttf') format('truetype'),
-  url('https://at.alicdn.com/t/font_579417_q8g2czwf1kathuxr.svg#iconfont') format('svg');
+  src: url('https://at.alicdn.com/t/font_579417_6pgsd5u4x5uyp66r.eot');
+  src: url('https://at.alicdn.com/t/font_579417_6pgsd5u4x5uyp66r.eot?#iefix') format('embedded-opentype'),
+  url('https://at.alicdn.com/t/font_579417_6pgsd5u4x5uyp66r.woff') format('woff'),
+  url('https://at.alicdn.com/t/font_579417_6pgsd5u4x5uyp66r.ttf') format('truetype'),
+  url('https://at.alicdn.com/t/font_579417_6pgsd5u4x5uyp66r.svg#iconfont') format('svg');
 }
 .banner_body{
 	background: url('../img/banner.png') 0px 0px;
 	padding: 50px 0;
+    background-attachment: fixed;
 }
 .display{
 	padding: 40px 30px;
@@ -35,13 +36,23 @@
 	margin-top: 14px;
     
 }
+.display_right_top img.active{
+    z-index: 8;
+}
+.yuandian li.active{
+   background: #fff; 
 
+}
 .logo{
 	background: #E0BD62;
     width: 200px;
     height: 200px;
     border-radius: 100%;
     text-align: center;
+}
+.logo h1{
+   font-family: 'Great Vibes', cursive;
+
 }
 @media screen and (max-width: 1080px){
 	.logo{
@@ -57,12 +68,13 @@
     font-size: 36px;
     display: block;
     padding: 4rem 0;
-    font-family: 'Great Vibes', cursive;
+    font-family: "Great Vibes";
 }
 
 .logo h1 a span {
     display: block;
     color: #212121;
+     font-family: 'Great Vibes', cursive;
 }
 @media screen and (max-width:1080px){
 	.logo h1 a {
@@ -90,7 +102,7 @@
 
 }
 .active  a{
-	color: #D57D39 !important;
+	color: #D57D39 ;
     background: transparent;
     border-bottom: 1px solid;
 }
@@ -99,33 +111,63 @@
 }
 
 i.home, .navbar-default .navbar-nav  li   a:hover i.home1 {
-    background: url(../img/img-sp.png) no-repeat -20px -282px;
+   /*  background: url(../img/img-sp.png) no-repeat -20px -282px; */
     display: inline-block;
     width: 18px;
     height: 18px;
+    /* font-family: 'iconfont';
+    font-size:18px; 
+    float: left;
+    margin-right: 10px; */
 }
 i.picture1 {
-    background: url(../img/img-sp.png) no-repeat -97px -240px;
+    
     display: inline-block;
     width: 18px;
     height: 18px;
 }
+
 i.edit1 {
-    background: url(../img/img-sp.png) no-repeat -182px -240px;
+    
     display: inline-block;
     width: 18px;
     height: 18px;
 }
 i.email {
-    background: url(../img/img-sp.png) no-repeat -354px -240px;
+    
     display: inline-block;
     width: 18px;
     height: 18px;
 }
+
 .display_right_top{
 	width: 100%;
 	height: 400px;
+    position: relative;
+    
 }
+.yuandian{
+    position: absolute;
+    right: 7%;
+    bottom: 4%;
+    z-index: 9;
+}
+.yuandian li{
+    display: block;
+    text-indent: -9999px;
+    width: 15px;
+    height: 15px;
+    background: #D57D39;
+    border-radius: 25px;
+    float: left;
+    margin: 5px;
+}
+.display_right_top img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all 1s;
+    }
 @media screen and (max-width: 990px){
 	.display_right_top{
 	
@@ -173,9 +215,18 @@ i.email {
 	margin: 3em 0 5em;
 
 }
+.person_skill_bottom_item{
+    transition: transform .5s linear;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 .person_skill_bottom_item img {
     padding: .1em;
     height: auto;
+    border: .2rem solid #fff;
+}
+.person_skill_bottom_item img:hover{
+   box-shadow: 0 10px 20px 3px #333;
 }
 .guanyu_item_top{
 	text-align: left;
@@ -207,11 +258,12 @@ i.email {
 .guanyu_item_top img {
     padding: .5em;
     border: 1px dotted #7D7D7D;
+    transition:  all 1s;
 }
 .guanyu_item h3{
     text-transform: capitalize;
     font-size: 26px;
-    color: #D57D39;
+     color: #E0BD62;
     margin: 0.5em 0;
     display: block;
     line-height: 1.5em;
@@ -224,9 +276,9 @@ i.email {
     line-height: 1.8em;
     overflow: hidden;
 }
-.email_top h3,#guanyu h3{
+.email_top h3{
 	font-size: 1.5em;
-    color: #E0BD62;
+     color: #E0BD62;
     margin: 2em 0 0;
 }
 .email_top h3 span {
@@ -314,9 +366,11 @@ i.email {
 .life h3{
 	font-size: 1.5em;
     color: #E0BD62;
-    margin: 2em 0 0 !important;
+    margin-top:2em ;
     padding-bottom: .5em;
     border-bottom: 1px solid #E0BD62;
+    
+    transition:  all 1s;
 }
 .life p{
 	margin: 1em 0 0;
@@ -335,10 +389,39 @@ i.email {
     position: absolute;
     top: 8px;
     left: 0;
-    background: url('../img/img-sp.png') no-repeat -96px -282px;
-    width: 18px;
-    height: 18px;
-    opacity: 0;
+    display: block;
+    
+    font-family: 'iconfont';
+    font-size:18px; 
+    float: left;
+    margin-right: 10px;
+    /* background: url('../img/img-sp.png') no-repeat -96px -282px; */
+    /* width: 18px;
+    height: 18px; */
+    font-family: ;
+   /*  opacity: 0; */
+}
+.span2{
+    position: absolute;
+    top: 8px;
+    left: 0;
+    display: block;
+    
+    font-family: 'iconfont';
+    font-size:18px; 
+    float: left;
+    margin-right: 10px;
+}
+.span3,.span4{
+    position: absolute;
+    top: 8px;
+    left: 0;
+    display: block;
+    
+    font-family: 'iconfont';
+    font-size:18px; 
+    float: left;
+    margin-right: 10px;
 }
 .navbar-nav li a i.picture1:hover{
       opacity: 0;
@@ -368,5 +451,15 @@ nav li .active1 a:hover{
        font-size: 14px;  
     }
 }
-
-
+/* .guanyu_item_top:hover{
+    transform: translate(0, 1px);
+} */
+.guanyu_item h3:hover{
+    transition: all 1s;
+    transform:rotate(360deg);
+    color: #333;
+}
+.join a:hover{
+    color: #fff;
+    background: #333;
+}
